@@ -2,6 +2,10 @@ mountall (0.2.2ubuntu1) UNRELEASED; urgency=low
 
   * Hide error removing /forcefsck, people mis-report this as a bug and
     don't tell us the error above it.
+  * Don't call mount.ecryptfs or mount.aufs when adding an entry for
+    /etc/mtab; these helpers are broken and do not support the -f argument.
+    This means your passphrase may end up in /etc/mtab, blame them not me.
+    LP: #431954, #443080.
 
  -- Scott James Remnant <scott@ubuntu.com>  Wed, 14 Oct 2009 05:11:16 +0100
 
